--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
+    "@internetarchive/ia-menu-slider": "^1.0.0",
+    "@internetarchive/icon-ellipses": "^1.1.3",
+    "@internetarchive/modal-manager": "^0.1.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
   },
