--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@internetarchive/your-webcomponent",
+  "name": "@internetarchive/ia-item-navigator",
   "version": "0.0.0",
-  "description": "The Internet Archive Typescript WebComponent template. It is based on the @open-wc template.",
+  "description": "Internet Archive's Item Navigator, visually eplore an item's contents.",
   "author": "Internet Archive",
   "license": "AGPL-3.0-only",
   "main": "dist/index.js",
@@ -24,7 +24,7 @@
     "@internetarchive/ia-menu-slider": "^1.0.0",
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
-    "lit-element": "^2.2.1",
+    "lit-element": "^2.5.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
