--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@internetarchive/ia-menu-slider": "^1.0.0",
+    "@internetarchive/ia-sharing-options": "^0.1.3-alpha2",
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
     "lit-element": "^2.5.1",
