--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@internetarchive/ia-menu-slider": "^1.0.0",
     "@internetarchive/ia-sharing-options": "^0.1.3-alpha2",
     "@internetarchive/icon-ellipses": "^1.1.3",
+    "@internetarchive/icon-share": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
     "lit-element": "^2.5.1",
     "lit-html": "^1.1.2"
