--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/icon-share": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
+    "@internetarchive/search-service": "^0.1.2",
     "lit-element": "^2.5.1",
     "lit-html": "^1.1.2"
   },
