--- a/package.json
+++ b/package.json
@@ -58,10 +58,11 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "class-methods-use-this": "off",
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error"
-      ],
+      "@typescript-eslint/no-unused-vars": ["error"],
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": ["error"],
       "import/no-unresolved": "off",
       "import/extensions": [
         "warn",
