always available menu shortcuts ++

--- a/package.json
+++ b/package.json
@@ -60,9 +60,13 @@
     "rules": {
       "class-methods-use-this": "off",
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": ["error"],
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
       "no-shadow": "off",
-      "@typescript-eslint/no-shadow": ["error"],
+      "@typescript-eslint/no-shadow": [
+        "error"
+      ],
       "import/no-unresolved": "off",
       "import/extensions": [
         "warn",
