--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@internetarchive/ia-sharing-options": "^0.1.3-alpha2",
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/icon-share": "^1.1.3",
+    "@internetarchive/icon-visual-adjustment": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
+    "@internetarchive/promised-singleton": "^0.3.0-alpha.1",
     "@internetarchive/search-service": "^0.1.2",
+    "@internetarchive/shared-resize-observer": "^0.0.1",
+    "@types/resize-observer-browser": "^0.1.6",
     "lit-element": "^2.5.1",
     "lit-html": "^1.1.2"
   },
