--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@internetarchive/your-webcomponent",
-  "version": "0.0.0",
-  "description": "The Internet Archive Typescript WebComponent template. It is based on the @open-wc template.",
+  "name": "@internetarchive/ia-item-navigator",
+  "version": "0.0.0-a12",
+  "description": "Internet Archive's Item Navigator, visually eplore an item's contents.",
   "author": "Internet Archive",
   "license": "AGPL-3.0-only",
   "main": "dist/index.js",
@@ -21,7 +21,17 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "lit-element": "^2.2.1",
+    "@internetarchive/ia-menu-slider": "^1.1.1",
+    "@internetarchive/ia-sharing-options": "^0.1.3-alpha2",
+    "@internetarchive/icon-ellipses": "^1.1.3",
+    "@internetarchive/icon-share": "^1.1.3",
+    "@internetarchive/icon-visual-adjustment": "^1.1.3",
+    "@internetarchive/modal-manager": "^0.1.0",
+    "@internetarchive/promised-singleton": "^0.3.0-alpha.1",
+    "@internetarchive/search-service": "^0.1.2",
+    "@internetarchive/shared-resize-observer": "^0.0.1",
+    "@types/resize-observer-browser": "^0.1.6",
+    "lit-element": "^2.5.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
@@ -52,8 +62,13 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "class-methods-use-this": "off",
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": [
         "error"
       ],
       "import/no-unresolved": "off",
@@ -63,7 +78,8 @@
           "js": "never",
           "ts": "never"
         }
-      ]
+      ],
+      "import/no-duplicates": "off"
     }
   },
   "prettier": {
