--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "@internetarchive/ia-menu-slider": "^1.1.1",
+    "@internetarchive/ia-menu-slider": "1.1.2-a1",
     "@internetarchive/ia-sharing-options": "^0.1.3-alpha2",
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/icon-share": "^1.1.3",
