--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-item-navigator",
-  "version": "0.0.3",
+  "version": "0.0.4-3",
   "description": "Internet Archive's Item Navigator, visually eplore an item's contents.",
   "author": "Internet Archive",
   "license": "AGPL-3.0-only",
@@ -27,7 +27,6 @@
     "@internetarchive/icon-share": "^1.1.3",
     "@internetarchive/icon-visual-adjustment": "^1.1.3",
     "@internetarchive/modal-manager": "^0.1.0",
-    "@internetarchive/promised-singleton": "^0.3.0-alpha.1",
     "@internetarchive/search-service": "^0.1.2",
     "@internetarchive/shared-resize-observer": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.6",
