--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "@internetarchive/ia-menu-slider": "^1.1.2",
+    "@internetarchive/ia-menu-slider": "^2.0.0",
     "@internetarchive/ia-sharing-options": "^0.1.4",
     "@internetarchive/icon-ellipses": "^1.1.3",
     "@internetarchive/icon-share": "^1.1.3",
@@ -34,12 +34,11 @@
     "@internetarchive/search-service": "^0.1.2",
     "@internetarchive/shared-resize-observer": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.6",
-    "lit-element": "^2.5.1",
-    "lit-html": "^1.1.2"
+    "lit": "^2.1.4"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.2.0",
-    "@open-wc/testing": "^2.0.0",
+    "@open-wc/testing": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "@web/dev-server": "^0.1.1",
