--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@open-wc/eslint-config": "^4.2.0",
     "@open-wc/testing": "^3.0.4",
+    "@types/mocha": "^9.1.0",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "@web/dev-server": "^0.1.1",
