--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
   },
   "dependencies": {
     "@internetarchive/ia-menu-slider": "^2.0.0",
-    "@internetarchive/ia-sharing-options": "^1.0.0",
-    "@internetarchive/icon-ellipses": "^1.3.2",
-    "@internetarchive/icon-share": "^1.3.2",
-    "@internetarchive/icon-visual-adjustment": "^1.3.2",
+    "@internetarchive/icon-ellipses": "^1.4.0-alpha.0",
+    "@internetarchive/icon-share": "^1.4.0-alpha.0",
+    "@internetarchive/icon-visual-adjustment": "^1.4.0-alpha.0",
     "@internetarchive/modal-manager": "^0.2.1",
     "@internetarchive/search-service": "^0.1.2",
     "@internetarchive/shared-resize-observer": "^0.0.1",
