--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "@internetarchive/ia-menu-slider": "^2.0.0",
+    "@internetarchive/ia-menu-slider": "^2.0.1-a1",
     "@internetarchive/icon-ellipses": "^1.4.0-alpha.0",
     "@internetarchive/icon-share": "^1.4.0-alpha.0",
     "@internetarchive/icon-visual-adjustment": "^1.4.0-alpha.0",
