--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
-    "@internetarchive/ia-menu-slider": "^2.0.1-a1",
-    "@internetarchive/icon-ellipses": "^1.4.0-alpha.0",
-    "@internetarchive/icon-share": "^1.4.0-alpha.0",
-    "@internetarchive/icon-visual-adjustment": "^1.4.0-alpha.0",
+    "@internetarchive/ia-menu-slider": "^2.0.1",
+    "@internetarchive/icon-ellipses": "^1.3.4",
+    "@internetarchive/icon-share": "^1.3.4",
+    "@internetarchive/icon-visual-adjustment": "^1.3.4",
     "@internetarchive/modal-manager": "^0.2.7",
     "@internetarchive/search-service": "^0.1.2",
     "@internetarchive/shared-resize-observer": "^0.0.1",
     "@types/resize-observer-browser": "^0.1.6",
-    "lit": "^2.1.4"
+    "lit": "^2.5.0"
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^4.2.0",
