eslint rule update to accommodate `lit/decorators.js`

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
       ],
       "import/no-unresolved": "off",
       "import/extensions": [
-        "warn",
+        "off",
         {
           "js": "never",
           "ts": "never"
