--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lit": "^2.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.0",
     "@open-wc/eslint-config": "^12.0.0",
     "@open-wc/testing": "^3.2.0",
     "@types/mocha": "^10.0.1",
@@ -46,6 +47,12 @@
     "concurrently": "^8.2.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-lit": "^1.3.0",
+    "eslint-plugin-lit-a11y": "^4.0.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-wc": "^1.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "madge": "^6.1.0",
