--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "rimraf": "^4.0.0",
     "sinon": "^15.2.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.0.0"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
