--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-lit-a11y": "^4.0.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-wc": "^1.2.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "madge": "^6.1.0",
