--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
   "dependencies": {
     "@internetarchive/icon-collapse-sidebar": "^1.3.4",
     "@internetarchive/icon-ellipses": "^1.3.4",
+    "@internetarchive/icon-email": "^1.3.4",
+    "@internetarchive/icon-facebook": "^1.3.4",
+    "@internetarchive/icon-link": "^1.3.4",
+    "@internetarchive/icon-pinterest": "^1.3.4",
     "@internetarchive/icon-share": "^1.3.4",
+    "@internetarchive/icon-tumblr": "^1.3.4",
+    "@internetarchive/icon-twitter": "^1.3.4",
     "@internetarchive/icon-visual-adjustment": "^1.3.4",
     "@internetarchive/modal-manager": "^0.2.7",
     "@internetarchive/search-service": "^0.1.2",
@@ -95,7 +101,8 @@
           "js": "never",
           "ts": "never"
         }
-      ]
+      ],
+      "import/no-duplicates": "off"
     }
   },
   "prettier": {
