--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
   "dependencies": {
     "@internetarchive/icon-collapse-sidebar": "^1.3.4",
     "@internetarchive/icon-ellipses": "^1.3.4",
+    "@internetarchive/icon-email": "^1.3.4",
+    "@internetarchive/icon-facebook": "^1.3.4",
+    "@internetarchive/icon-link": "^1.3.4",
+    "@internetarchive/icon-pinterest": "^1.3.4",
     "@internetarchive/icon-share": "^1.3.4",
+    "@internetarchive/icon-tumblr": "^1.3.4",
+    "@internetarchive/icon-twitter": "^1.3.4",
     "@internetarchive/icon-visual-adjustment": "^1.3.4",
     "@internetarchive/modal-manager": "^0.2.7",
     "@internetarchive/search-service": "^0.1.2",
@@ -71,14 +77,13 @@
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "extends": [
-      "@open-wc/eslint-config",
-      "eslint-config-prettier"
+      "@open-wc",
+      "prettier"
     ],
     "plugins": [
       "@typescript-eslint"
     ],
     "rules": {
-      "class-methods-use-this": "off",
       "no-unused-vars": "off",
       "@typescript-eslint/no-unused-vars": [
         "error"
@@ -87,9 +92,11 @@
       "@typescript-eslint/no-shadow": [
         "error"
       ],
+      "class-methods-use-this": "off",
       "import/no-unresolved": "off",
       "import/extensions": [
         "off",
+        "ignorePackages",
         {
           "js": "never",
           "ts": "never"
