--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,14 @@ jobs:
         node-version: 16.x
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
 
     - name: Run tests
-      run: yarn run test
+      run: npm run test
 
-    - name: Upload reports
-      run: npx codecov
+    - name: Upload Codecov reports
+      uses: codecov/codecov-action@main
+      with:
+        fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
