--- a/.github/workflows/gh-pages-main.yml
+++ b/.github/workflows/gh-pages-main.yml
@@ -22,10 +22,10 @@ jobs:
           node-version: 16.x
 
       - name: Install dependencies
-        run: yarn install
-  
+        run: npm install
+
       - name: Create build files for gh-pages deploy
-        run: yarn ghpages:build
+        run: npm run ghpages:build
 
       # Reference: https://github.com/JamesIves/github-pages-deploy-action
       - name: Deploy 🚀
