--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "@internetarchive/icon-tumblr": "^1.3.4",
     "@internetarchive/icon-twitter": "^1.3.4",
     "@internetarchive/icon-visual-adjustment": "^1.3.4",
-    "@internetarchive/modal-manager": "^0.2.7",
-    "@internetarchive/search-service": "^0.1.2",
-    "@internetarchive/shared-resize-observer": "^0.0.1",
-    "@types/resize-observer-browser": "^0.1.6",
+    "@internetarchive/metadata-service": "^0.1.1",
+    "@internetarchive/modal-manager": "^2.0.0",
+    "@internetarchive/shared-resize-observer": "^0.2.0",
     "lit": "^2.8.0"
   },
   "devDependencies": {
@@ -50,6 +49,7 @@
     "@open-wc/eslint-config": "^12.0.0",
     "@open-wc/testing": "^3.2.0",
     "@types/mocha": "^10.0.1",
+    "@types/resize-observer-browser": "^0.1.11",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "@web/dev-server": "^0.3.1",
@@ -59,7 +59,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-lit": "^1.3.0",
+    "eslint-plugin-lit": "^1.15.0",
     "eslint-plugin-lit-a11y": "^4.0.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-wc": "^1.2.0",
@@ -78,22 +78,20 @@
     "parser": "@typescript-eslint/parser",
     "extends": [
       "@open-wc",
-      "prettier"
+      "prettier",
+      "plugin:lit/recommended"
     ],
     "plugins": [
       "@typescript-eslint"
     ],
     "rules": {
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error"
-      ],
+      "@typescript-eslint/no-unused-vars": "error",
       "no-shadow": "off",
-      "@typescript-eslint/no-shadow": [
-        "error"
-      ],
+      "@typescript-eslint/no-shadow": "error",
       "class-methods-use-this": "off",
       "import/no-unresolved": "off",
+      "wc/guard-super-call": "off",
       "import/extensions": [
         "off",
         "ignorePackages",
