--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,6 @@ jobs:
     - name: Run tests
       run: npm run test
 
-    - name: Upload Codecov reports
-      uses: codecov/codecov-action@main
+    - uses: codecov/codecov-action@v5
       with:
-        fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
-        verbose: true
