--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-item-navigator",
-  "version": "2.1.3",
+  "version": "2.1.3-alpha.1",
   "description": "Internet Archive's Item Navigator, visually explore an item's contents.",
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\"",
     "build": "tsc",
     "prepare": "rimraf dist && tsc && husky install",
-    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "lint": "eslint --ext .ts,.html . && prettier \"**/*.ts\" --check ",
+    "format": "eslint --ext .ts,.html . --fix && prettier \"**/*.ts\" --write",
     "circular": "madge --circular --extensions ts .",
     "test": "tsc && npm run lint && npm run circular && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
@@ -39,70 +39,39 @@
     "@internetarchive/icon-tumblr": "^1.3.4",
     "@internetarchive/icon-twitter": "^1.3.4",
     "@internetarchive/icon-visual-adjustment": "^1.3.4",
-    "@internetarchive/iaux-item-metadata": "^1.0.4",
     "@internetarchive/metadata-service": "^1.0.3",
     "@internetarchive/modal-manager": "^2.0.0",
     "@internetarchive/shared-resize-observer": "^0.2.0",
     "lit": "^2.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
-    "@open-wc/eslint-config": "^12.0.0",
-    "@open-wc/testing": "^3.2.0",
-    "@types/mocha": "^10.0.1",
-    "@types/resize-observer-browser": "^0.1.11",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
-    "@web/dev-server": "^0.3.1",
-    "@web/test-runner": "^0.17.1",
-    "concurrently": "^8.2.1",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@internetarchive/iaux-item-metadata": "^1.0.4",
+    "@open-wc/eslint-config": "^12.0.3",
+    "@open-wc/testing": "^4.0.0",
+    "@types/mocha": "^10.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.20.0",
+    "concurrently": "^9.1.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-html": "^8.1.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-lit": "^1.15.0",
-    "eslint-plugin-lit-a11y": "^4.0.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-wc": "^1.2.0",
-    "gh-pages": "^5.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "madge": "^6.1.0",
-    "prettier": "^3.0.3",
-    "rimraf": "^4.0.0",
-    "sinon": "^15.2.0",
-    "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "vite": "^4.0.0"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "@open-wc",
-      "prettier",
-      "plugin:lit/recommended"
-    ],
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "rules": {
-      "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "error",
-      "no-shadow": "off",
-      "@typescript-eslint/no-shadow": "error",
-      "class-methods-use-this": "off",
-      "import/no-unresolved": "off",
-      "wc/guard-super-call": "off",
-      "import/extensions": [
-        "off",
-        "ignorePackages",
-        {
-          "js": "never",
-          "ts": "never"
-        }
-      ],
-      "import/no-duplicates": "off"
-    }
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-wc": "^2.2.0",
+    "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
+    "madge": "^8.0.0",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
+    "ts-lit-plugin": "^2.0.2",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.2.1"
   },
   "prettier": {
     "singleQuote": true,
