--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@open-wc/eslint-config": "^12.0.3",
     "@open-wc/testing": "^4.0.0",
     "@types/mocha": "^10.0.10",
+    "@types/resize-observer-browser": "^0.1.11",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "@web/dev-server": "^0.4.6",
